# miniscience24

lab1/task0/: t1.cpp  t2.cpp  t3.cpp
lab1/task1/: tor.cpp
lab1/task2/: cat.cpp
lab2/: README.md  cat_vtk.cpp
lab3/: README.md
lab3/cpp/: CMakeLists.txt  heat.h  heat.ufl  lab3.cpp
lab3/py_test/: lab3.py
microproject/: CMakeLists.txt  cylinder.cpp  heat_eq.py  heat_eq_static.py  heat_eq_static_3D.py  rect.cpp
microproject/examples/copper/: param.txt
microproject/examples/platinum/: param.txt
